--- a/sm7_gsa_network.html
+++ b/sm7_gsa_network.html
@@ -933,7 +933,7 @@ ggplot(.dt, aes(g, -log10(adj.P.Val), colour=`gs_name`)) +
 </ul>
 <p>Under the null hypothesis:</p>
 <p><span class="math display">\[H_{0}:\, q \le q^{\star}\]</span></p>
-<p>We may observe overlap <span class="math inline">\(q^{\star}\)</span> genes by random sampling of <span class="math inline">\(k\)</span> genes <strong>without</strong> replacement.</p>
+<p>We may observe <span class="math inline">\(q^{\star}\)</span> (out of <span class="math inline">\(k\)</span>) genes overlapping with a gene set of interest by random sampling of <span class="math inline">\(k\)</span> genes <strong>without</strong> replacement.</p>
 <p>Therefore, we can calculate the p-value:</p>
 <p><span class="math inline">\(P(q &gt; q^{\star}|n, m, k) = 1 - \sum_{q = 0}^{q^{\star}} {m \choose q } {n \choose k-q} / {n+m \choose k}\)</span></p>
 <p>In <code>R</code>’s <code>phyper</code>, it’s as simple as:</p>
@@ -1652,7 +1652,7 @@ BiocManager::install(&quot;fgsea&quot;)</code></pre>
     head(10) %&gt;% 
     select(-leadingEdge) %&gt;% 
     knitr::kable()</code></pre>
-<table>
+<table style="width:100%;">
 <colgroup>
 <col width="37%"></col>
 <col width="8%"></col>
@@ -1661,7 +1661,7 @@ BiocManager::install(&quot;fgsea&quot;)</code></pre>
 <col width="8%"></col>
 <col width="7%"></col>
 <col width="4%"></col>
-<col width="17%"></col>
+<col width="18%"></col>
 </colgroup>
 <thead>
 <tr class="header">
@@ -1682,99 +1682,99 @@ BiocManager::install(&quot;fgsea&quot;)</code></pre>
 <td align="right">0.0000000</td>
 <td align="right">0.8266573</td>
 <td align="right">0.6856763</td>
-<td align="right">1.959328</td>
+<td align="right">1.985603</td>
 <td align="right">66</td>
 <td align="left">RPL31, RPL23A, RPL15</td>
 </tr>
 <tr class="even">
 <td align="left">KEGG_CELL_CYCLE</td>
-<td align="right">0.0001848</td>
-<td align="right">0.0171848</td>
-<td align="right">0.5188481</td>
+<td align="right">0.0000728</td>
+<td align="right">0.0067667</td>
+<td align="right">0.5384341</td>
 <td align="right">0.5048543</td>
-<td align="right">1.490273</td>
+<td align="right">1.506303</td>
 <td align="right">122</td>
 <td align="left">CCND1, CDKN1C, MCM6</td>
 </tr>
 <tr class="odd">
 <td align="left">KEGG_PROGESTERONE_MEDIATED_OOCYTE_MATURATION</td>
-<td align="right">0.0003076</td>
-<td align="right">0.0190708</td>
-<td align="right">0.4984931</td>
+<td align="right">0.0001598</td>
+<td align="right">0.0099103</td>
+<td align="right">0.5188481</td>
 <td align="right">0.5345082</td>
-<td align="right">1.547499</td>
+<td align="right">1.570784</td>
 <td align="right">83</td>
 <td align="left">KRAS, CCNB1, PIK3R1</td>
 </tr>
 <tr class="even">
 <td align="left">KEGG_AXON_GUIDANCE</td>
-<td align="right">0.0005450</td>
-<td align="right">0.0205846</td>
-<td align="right">0.4772708</td>
+<td align="right">0.0003851</td>
+<td align="right">0.0146633</td>
+<td align="right">0.4984931</td>
 <td align="right">0.4792875</td>
-<td align="right">1.414896</td>
+<td align="right">1.431155</td>
 <td align="right">128</td>
 <td align="left">ABLIM1, NCK2, ROBO2</td>
 </tr>
 <tr class="odd">
 <td align="left">KEGG_DNA_REPLICATION</td>
-<td align="right">0.0006549</td>
-<td align="right">0.0205846</td>
-<td align="right">0.4772708</td>
+<td align="right">0.0003942</td>
+<td align="right">0.0146633</td>
+<td align="right">0.4984931</td>
 <td align="right">0.6193616</td>
-<td align="right">1.696745</td>
+<td align="right">1.716304</td>
 <td align="right">34</td>
 <td align="left">MCM6, MCM7, MCM2</td>
 </tr>
 <tr class="even">
 <td align="left">KEGG_CYSTEINE_AND_METHIONINE_METABOLISM</td>
-<td align="right">0.0006640</td>
-<td align="right">0.0205846</td>
-<td align="right">0.4772708</td>
+<td align="right">0.0010769</td>
+<td align="right">0.0333834</td>
+<td align="right">0.4550599</td>
 <td align="right">0.6236481</td>
-<td align="right">1.699303</td>
+<td align="right">1.720417</td>
 <td align="right">32</td>
 <td align="left">CDO1, AMD1, DNMT3B</td>
 </tr>
 <tr class="odd">
 <td align="left">KEGG_STEROID_BIOSYNTHESIS</td>
-<td align="right">0.0013898</td>
-<td align="right">0.0369295</td>
+<td align="right">0.0017948</td>
+<td align="right">0.0476903</td>
 <td align="right">0.4550599</td>
 <td align="right">0.6874421</td>
-<td align="right">1.756386</td>
+<td align="right">1.812850</td>
 <td align="right">17</td>
 <td align="left">CYP51A1, MSMO1, SQLE</td>
 </tr>
 <tr class="even">
-<td align="left">KEGG_GAP_JUNCTION</td>
-<td align="right">0.0024604</td>
-<td align="right">0.0572040</td>
-<td align="right">0.4317077</td>
-<td align="right">0.4922953</td>
-<td align="right">1.424039</td>
-<td align="right">82</td>
-<td align="left">TUBB2B, KRAS, PRKCA</td>
-</tr>
-<tr class="odd">
-<td align="left">KEGG_MAPK_SIGNALING_PATHWAY</td>
-<td align="right">0.0035333</td>
-<td align="right">0.0698487</td>
-<td align="right">0.4317077</td>
-<td align="right">0.4140507</td>
-<td align="right">1.259208</td>
-<td align="right">259</td>
-<td align="left">MEF2C, JUN, CACNB2</td>
-</tr>
-<tr class="even">
 <td align="left">KEGG_FRUCTOSE_AND_MANNOSE_METABOLISM</td>
-<td align="right">0.0037553</td>
-<td align="right">0.0698487</td>
+<td align="right">0.0027564</td>
+<td align="right">0.0640855</td>
 <td align="right">0.4317077</td>
 <td align="right">0.5769388</td>
-<td align="right">1.580528</td>
+<td align="right">1.598746</td>
 <td align="right">34</td>
 <td align="left">HK2, PFKFB2, ALDOC</td>
+</tr>
+<tr class="odd">
+<td align="left">KEGG_GALACTOSE_METABOLISM</td>
+<td align="right">0.0043502</td>
+<td align="right">0.0835642</td>
+<td align="right">0.4070179</td>
+<td align="right">0.6098009</td>
+<td align="right">1.651723</td>
+<td align="right">25</td>
+<td align="left">HK2, B4GALT2, B4GALT1</td>
+</tr>
+<tr class="even">
+<td align="left">KEGG_GAP_JUNCTION</td>
+<td align="right">0.0045733</td>
+<td align="right">0.0835642</td>
+<td align="right">0.4070179</td>
+<td align="right">0.4922953</td>
+<td align="right">1.445605</td>
+<td align="right">82</td>
+<td align="left">TUBB2B, KRAS, PRKCA</td>
 </tr>
 </tbody>
 </table>
@@ -1794,7 +1794,7 @@ gwas.fgsea %&gt;%
 <table>
 <colgroup>
 <col width="37%"></col>
-<col width="5%"></col>
+<col width="6%"></col>
 <col width="7%"></col>
 <col width="8%"></col>
 <col width="8%"></col>
@@ -1817,103 +1817,103 @@ gwas.fgsea %&gt;%
 <tbody>
 <tr class="odd">
 <td align="left">Protein quantitative trait loci (liver)</td>
-<td align="right">0e+00</td>
-<td align="right">2.00e-07</td>
-<td align="right">0.8012156</td>
+<td align="right">0.0e+00</td>
+<td align="right">5.00e-07</td>
+<td align="right">0.7881868</td>
 <td align="right">0.4132858</td>
-<td align="right">1.300420</td>
+<td align="right">1.307515</td>
 <td align="right">1217</td>
 <td align="left">SGK1, KLHL1, INHBB</td>
 </tr>
 <tr class="even">
-<td align="left">Cortical surface area</td>
-<td align="right">0e+00</td>
-<td align="right">6.00e-07</td>
-<td align="right">0.7614608</td>
-<td align="right">0.4355612</td>
-<td align="right">1.357530</td>
-<td align="right">699</td>
-<td align="left">MEF2C, SOX11, WWC1</td>
-</tr>
-<tr class="odd">
 <td align="left">Metabolite levels</td>
-<td align="right">0e+00</td>
-<td align="right">6.00e-07</td>
+<td align="right">0.0e+00</td>
+<td align="right">9.00e-07</td>
 <td align="right">0.7614608</td>
 <td align="right">0.4095140</td>
-<td align="right">1.286680</td>
+<td align="right">1.295595</td>
 <td align="right">1135</td>
 <td align="left">SGK1, ATOH7, C14orf132</td>
 </tr>
+<tr class="odd">
+<td align="left">Cortical surface area</td>
+<td align="right">0.0e+00</td>
+<td align="right">1.40e-06</td>
+<td align="right">0.7477397</td>
+<td align="right">0.4355612</td>
+<td align="right">1.369783</td>
+<td align="right">699</td>
+<td align="left">MEF2C, SOX11, WWC1</td>
+</tr>
 <tr class="even">
 <td align="left">Schizophrenia</td>
-<td align="right">0e+00</td>
-<td align="right">1.60e-06</td>
-<td align="right">0.7337620</td>
+<td align="right">0.0e+00</td>
+<td align="right">2.40e-06</td>
+<td align="right">0.7195128</td>
 <td align="right">0.4341164</td>
-<td align="right">1.352154</td>
+<td align="right">1.364925</td>
 <td align="right">677</td>
 <td align="left">MEF2C, TMTC1, LIMA1</td>
 </tr>
 <tr class="odd">
 <td align="left">Highest math class taken (MTAG)</td>
-<td align="right">1e-07</td>
-<td align="right">5.10e-06</td>
+<td align="right">1.0e-07</td>
+<td align="right">4.70e-06</td>
 <td align="right">0.7049757</td>
 <td align="right">0.4244059</td>
-<td align="right">1.323875</td>
+<td align="right">1.336407</td>
 <td align="right">738</td>
 <td align="left">MEF2C, SALL3, INHBB</td>
 </tr>
 <tr class="even">
-<td align="left">Educational attainment (MTAG)</td>
-<td align="right">2e-07</td>
-<td align="right">1.15e-05</td>
-<td align="right">0.6901325</td>
-<td align="right">0.4094558</td>
-<td align="right">1.282481</td>
-<td align="right">900</td>
-<td align="left">MEF2C, OSBPL3, SLC17A1</td>
-</tr>
-<tr class="odd">
 <td align="left">PR interval</td>
-<td align="right">3e-07</td>
-<td align="right">1.29e-05</td>
+<td align="right">4.0e-07</td>
+<td align="right">1.99e-05</td>
 <td align="right">0.6749629</td>
 <td align="right">0.5005374</td>
-<td align="right">1.512782</td>
+<td align="right">1.522858</td>
 <td align="right">220</td>
 <td align="left">BCL6, SYNE3, EPAS1</td>
 </tr>
+<tr class="odd">
+<td align="left">Educational attainment (MTAG)</td>
+<td align="right">5.0e-07</td>
+<td align="right">2.06e-05</td>
+<td align="right">0.6749629</td>
+<td align="right">0.4094558</td>
+<td align="right">1.293696</td>
+<td align="right">900</td>
+<td align="left">MEF2C, OSBPL3, SLC17A1</td>
+</tr>
 <tr class="even">
-<td align="left">Cortical thickness</td>
-<td align="right">5e-07</td>
-<td align="right">2.04e-05</td>
+<td align="left">Systolic blood pressure</td>
+<td align="right">8.0e-07</td>
+<td align="right">3.19e-05</td>
 <td align="right">0.6594444</td>
-<td align="right">0.4313908</td>
-<td align="right">1.336360</td>
-<td align="right">519</td>
-<td align="left">MEF2C, SOX11, ECE1</td>
+<td align="right">0.3962629</td>
+<td align="right">1.253651</td>
+<td align="right">1168</td>
+<td align="left">PFKFB2, LIMA1, AHRR</td>
 </tr>
 <tr class="odd">
 <td align="left">Educational attainment (years of education)</td>
-<td align="right">8e-07</td>
-<td align="right">2.66e-05</td>
+<td align="right">9.0e-07</td>
+<td align="right">3.22e-05</td>
 <td align="right">0.6594444</td>
 <td align="right">0.4040904</td>
-<td align="right">1.267215</td>
+<td align="right">1.277380</td>
 <td align="right">968</td>
 <td align="left">MEF2C, SLC17A1, KCNJ3</td>
 </tr>
 <tr class="even">
-<td align="left">Systolic blood pressure</td>
-<td align="right">1e-06</td>
-<td align="right">3.01e-05</td>
+<td align="left">Self-reported math ability (MTAG)</td>
+<td align="right">1.4e-06</td>
+<td align="right">4.28e-05</td>
 <td align="right">0.6435518</td>
-<td align="right">0.3962629</td>
-<td align="right">1.245893</td>
-<td align="right">1168</td>
-<td align="left">PFKFB2, LIMA1, AHRR</td>
+<td align="right">0.4309756</td>
+<td align="right">1.345603</td>
+<td align="right">518</td>
+<td align="left">MEF2C, INHBB, GALNT13</td>
 </tr>
 </tbody>
 </table>
